<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Red Sparrow: Zamooni Slayer Demo </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Red Sparrow</string>
    <string name="points_tv">kill points: </string>
    <string name="title_activity_splash_scree">Red Sparrow: Zamooni Slayer Demo Edition</string>
    <string name="gameOver0">- Sim, acabou -</string>
    <string name="gameOver1">- A Terra esta perdida -</string>
    <string name="gameOver2">Trombetas e tambores\nressoam em um monolitico requiem\nao grande heroi chamado</string>
    <string name="nomeEditText">nome aqui</string>
    <string name="gameOver3">Que triunfou epicamente sobre</string>
    <string name="gameOver4">Zamooni scout(s)</string>

    <string name="title_activity_high_scores">High Scores</string>
    <string name="high_scores_label">Melhores perdedores:</string>

</resources>
