<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="br.jp.redsparrow.engine.menu.EnterNameDialog"
    android:id="@+id/gameOverLayout">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gameOver0"
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/gameOver0"
                android:textSize="50dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gameOver1"
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/gameOver1"
                android:textSize="30dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gameOver2"
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/gameOver2"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="10dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="nome aqui"
                android:textColorHint="@android:color/holo_red_light"
                android:id="@+id/nomeEditText"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:textColor="@android:color/holo_red_light"
                android:textSize="50dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gameOver3"
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/gameOver3"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0"
                android:textColor="@android:color/holo_red_light"
                android:id="@+id/gameOverKillPoints"
                android:textSize="50dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gameOver4"
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/gameOver4"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"/>

</LinearLayout>
